# projeto-orientado-2-sintetizador-de-udio-viniciuscaffeu

./: CMakeLists.txt  README.md  adc_audio.c  pwm_audio.c  sintetizador.c  utils.c
include/: adc_audio.h  pwm_audio.h  sintetizador.h  utils.h
